[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 使用`cargo build`编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开


# 使用`cargo build --release`编译时需要的配置
[profile.release]
panic = "abort" # 禁用panic时栈展开

[dependencies]
# bootloader = "0.9.8" # 不要修改版本c
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6" # 不要修改版本c
lazy_static = { version = "1.0", features = [
    "spin_no_std",
] } #  延迟初始化（lazily initialized）的静态变量
spin = "0.9.2" # 自旋锁
x86_64 = "0.14.4"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0" # heap 分配器

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
